# pitruck

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  extension.js  grammar.md  language-configuration.json  package.json
.github/workflows/: ci.yml  release.yml
documentation/: index.html  technical_reference.html  technical_reference.md  technical_reference_1.6.0.html  technical_reference_1.6.1.html  technical_reference_5.html  technical_reference_6.html
lib/: color.pr  math.pr  std.pr  struct.pr  system.pr  time.pr  trucky.pr  uuid.pr
scripts/: buildlang.bat
src/: ast.rs  cache.rs  compiler.rs  error.rs  httpclient.rs  interpreter.rs  json.rs  lexer.rs  main.rs  parser.rs  store.rs  symbol.rs  token.rs  value.rs
syntaxes/: pitruck.tmLanguage.json
